tests/bad/func/labelled_instead_of_positional.oc
/// fail: Missing required argument `b` of type u32


def foo(a: u32, b: u32, c: u32 = 5): u32 => a + b + c

def main() {
    // All OK
    foo(1, 2, c: 7)
    foo(1, b: 2, c: 7)
    foo(a: 1, b: 2, c: 7)

    // Fail
    foo(c: 7, a: 1)
}